<resources>
    <string name="app_name">風来のシレンSFCサポーター</string>
    <string name="go_dmg_calc_btn">ダメージ計算をする</string>
    <string name="input_level">レベル</string>
    <string name="input_sword_pow">剣の攻撃力</string>
    <string name="input_pow">ちから</string>
    <string name="input_def">防御力</string>
    <string name="input_hp">HP</string>
    <string name="input_monster">モンスター</string>
    <string name="run_calc_btn">計算開始</string>
    <string name="show_maxim_dmg_to">最大与ダメージ</string>
    <string name="show_minimum_dmg_to">最小与ダメージ</string>
    <string name="show_maxim_dmg_by">最大被ダメージ</string>
    <string name="show_minimum_dmg_by">最小被ダメージ</string>
    <string name="table_name">アイテム名</string>
    <string name="table_buy_price">買値</string>
    <string name="table_sell_price">売値</string>
    <string name="table_fixed_val">+1</string>
    <string name="del_info_btn">登録情報解除</string>
    <string name="worst_case_text">最悪</string>
    <string name="beat_text">回倒すのにかかります</string>
    <string name="beaten_text">回で倒されます</string>
    <string name="cant_beat_text">倒せません</string>
    <string name="cant_beaten_text">倒せません</string>
</resources>