<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/line"
    android:layout_marginBottom="5dp">


    <TextView
        android:id="@+id/fNameRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:layout_margin="1dp"
        android:background="@color/white"
        android:text="@string/table_name" />

    <TextView
        android:id="@+id/fItemBuyPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="1dp"
        android:background="@color/white"
        android:gravity="end"
        android:text="@string/table_buy_price" />
    <TextView
        android:id="@+id/fItemFixedBuyPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="1dp"
        android:background="@color/white"
        android:gravity="end"
        android:text="@string/table_fixed_val"/>

    <TextView
        android:id="@+id/fItemSellPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:layout_margin="1dp"
        android:gravity="end"
        android:text="@string/table_sell_price" />
    <TextView
        android:id="@+id/fItemFixedSellPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:layout_margin="1dp"
        android:gravity="end"
        android:text="@string/table_fixed_val"/>
</TableRow>
