<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/tableLayout"
    android:stretchColumns="0">
    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/line">


        <TextView
            android:id="@+id/itemNameTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/table_name" />

        <TextView
            android:id="@+id/itemBuyPriceTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/table_buy_price" />

        <TextView
            android:id="@+id/itemSellPriceTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/table_sell_price"
            android:gravity="center"/>
    </TableRow>
</TableLayout>