<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5deb3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/show_maxim_dmg"/>
        <TextView
            android:id="@+id/maximDamage"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:textColor="#ff4500"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/show_minimum_dmg"/>
        <TextView
            android:id="@+id/minimumDamage"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:textColor="#0045ff"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/levelInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:background="#ffffff"
                android:hint="@string/input_level"
                android:inputType="number"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/swordPowInput"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:background="#ffffff"
                android:hint="@string/input_sword_pow"
                android:importantForAutofill="no"
                android:inputType="number" />
            <EditText
                android:id="@+id/powInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:background="#ffffff"
                android:hint="@string/input_pow"
                android:inputType="number"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/defInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:background="#ffffff"
                android:hint="@string/input_def"
                android:inputType="number"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/monsterInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:background="#ffffff"
                android:hint="@string/input_monster"
                android:inputType="text"
                android:importantForAutofill="no" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:text="@string/run_calc_btn" />
    </LinearLayout>
</LinearLayout>